--- a/calc.css
+++ b/calc.css
@@ -7,7 +7,7 @@
   --container-bg-color: rgb(239, 244, 250);
   --screen-bg-color: rgb(242, 242, 242);
   --btn-hover-color: rgb(188, 226, 248);
-  --dropdownMenu-color: rgb(228, 240, 247);
+  --dropdown-Menu-color: rgb(228, 240, 247);
   --box-shadow-color: rgba(46, 46, 46, 1);
   --equal-operator: #92c2e8;
 }
@@ -27,8 +27,7 @@
   overflow: hidden;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
 .head {
   padding: 4px;
@@ -62,17 +61,15 @@ body {
   content: "";
   background: url("./dropdown.png");
 }
-.dropdown-chart-1 {
+.dropdown-chart-1,
+.dropdown-chart-2 {
   display: none;
   width: 140px;
   position: absolute;
-  background-color: var(--dropdownMenu-color);
+  background-color: var(--dropdown-Menu-color);
 }
 .dropdown-chart-2 {
-  display: none;
   width: 115px;
-  position: absolute;
-  background-color: var(--dropdownMenu-color);
 }
 .btn-deg,
 .btn-fe {
